Update README, LICENSE, images, etc (#30)
* Add README and images

* Create LICENSE

* Make README look nice

* Update README.md